<resources>
    <string name="app_name">mpdis</string>
    <string name="app_created">This app was created by Victor Statko</string>
    <string name="student">(student of group № 620603)</string>
    <string name="help">You can navigate in the application using the buttons at the bottom of the screen.</string>
    <string name="click_me">Click me.</string>
    <string name="click_cat">Cat.</string>
    <string name="page1_title">Practice 1</string>
    <string name="page2_title">Practice 2, 6</string>
    <string name="page3_title">Practice 3</string>
    <string name="page4_title">Practice 4</string>
    <string name="page5_title">Practice 5</string>
    <string name="page6_title">Practice 6</string>
    <string name="page7_title">Practice 7</string>
    <string name="page8_title">Practice 8</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="first_name">First name</string>
    <string name="surname">Surname</string>
    <string name="patronymic">Patronymic</string>
    <string name="group_number">Group Number</string>
    <string name="faculty">Faculty</string>
    <string name="students">Student list</string>
    <string name="validate_first_name">First name should not be empty!</string>
    <string name="validate_surname">Surname should not be empty!</string>
    <string name="validate_patronymic">Patronymic should not be empty!</string>
    <string name="validate_group_number">Group number should not be empty!</string>
    <string name="validate_faculty">Faculty number should not be empty!</string>
    <string name="validate_name">Name should not be empty!</string>
    <string name="validate_number">Phone number should not be empty!</string>
    <string name="github"><a href="https://github.com/VictorStatko">github.com/VictorStatko</a></string>
    <string name="animate">Animate</string>
    <string name="duration">Duration</string>
    <string name="select_photo">Select photo</string>
    <string name="change_database">Database</string>
    <string name="file">file</string>
    <string name="sqlite">SQLite</string>
    <string name="add_person">add person</string>
    <string name="delete_all">delete all</string>
    <string name="developer_info">about me</string>
    <string name="wifi">Wifi enabled:</string>
    <string name="battery_value">Battery value:</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="add_button">add</string>
    <string name="contacts">Phone contact list</string>
    <string name="camera">Camera</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="url">url</string>
    <string name="go">go</string>
    <string name="clear">clear</string>
</resources>
