<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".activities.FourthActivity">

    <ImageView
        android:id="@+id/footballBall"
        android:layout_width="115dp"
        android:layout_height="95dp"
        android:layout_marginBottom="270dp"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="78dp"
        app:layout_constraintBottom_toTopOf="@+id/animate"
        app:layout_constraintEnd_toStartOf="@+id/BasketballBall"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/football_ball" />

    <Button
        android:id="@+id/animate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:layout_marginEnd="46dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="436dp"
        android:text="@string/animate"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toStartOf="@+id/duration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/BasketballBall"
        android:layout_width="114dp"
        android:layout_height="97dp"
        android:layout_marginBottom="285dp"
        android:layout_marginEnd="52dp"
        android:layout_marginTop="91dp"
        app:layout_constraintBottom_toTopOf="@+id/animate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/footballBall"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/basketball_ball" />

    <EditText
        android:id="@+id/duration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:layout_marginTop="436dp"
        android:ems="10"
        android:hint="@string/duration"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.901"
        app:layout_constraintStart_toEndOf="@+id/animate"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/prevActivity"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prev" />

        <TextView
            android:id="@+id/space"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/nextActivity"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>